derive-ex-tests/tests/compile_fail/compare_op/variant_skip.stderr
error: cannot specify `skip` for enum variants
 --> tests/compile_fail/compare_op/variant_skip.rs:5:18
  |
5 |     #[partial_eq(ignore)]
  |                  ^^^^^^
